update unsubscribing from mails working and url .env for mail templates

--- a/app/mails/html_templates/recommendation_notification.html
+++ b/app/mails/html_templates/recommendation_notification.html
@@ -1071,7 +1071,7 @@
                                       ></a
                                       >Vous ne voulez plus recevoir ces emails? / No longer want to
                                       receive these emails?&nbsp;<a
-                                        href="http://tool.ciro3903.odns.fr/unsubscribe"
+                                        href="${URL}/unsubscribe"
                                         target="_blank"
                                         style="
                                           -webkit-text-size-adjust: none;
