mail for registration done + fetching last date sent done

--- a/app/mails/html_templates/recommendation_notification.html
+++ b/app/mails/html_templates/recommendation_notification.html
@@ -791,8 +791,13 @@
                                         font-size: 14px;
                                       "
                                     >
-                                      If you wish to participate in our upcoming project, please
-                                      register using this link: ${REGISTRATION}
+                                      If you wish to participate in our upcoming project or if you want to know more, please
+                                      use this link: ${REGISTRATION}
+                                      <br />
+                                      <br />
+                                      If you need even more details, you can contact a responsible :
+                                      <br> ${TO_CONTACT}</span>
+                                    >
                                     </p>
                                     <p
                                       style="
@@ -925,8 +930,12 @@
                                         font-size: 14px;
                                       "
                                     >
-                                      Si vous souhaitez participer à notre prochain projet, veuillez
-                                      vous inscrire en suivant ce lien : ${REGISTRATION}
+                                      Si vous souhaitez participer à notre prochain projet ou en savoir plus, veuillez
+                                      suivre ce lien : ${REGISTRATION}
+                                      <br />
+                                      <br />
+                                      Si vous avez besoin de davantage d'information, vous pouvez contacter un responsable :
+                                      <br> ${TO_CONTACT}</span>
                                     </p>
                                     <p
                                       style="
