small mail template fix

--- a/app/mails/html_templates/confirmation_notification.html
+++ b/app/mails/html_templates/confirmation_notification.html
@@ -719,8 +719,8 @@
                                         font-size: 14px;
                                       "
                                     >
-                                      Thank you for your inscription on the project ${PROJECT}, we
-                                      have chosen to validate your inscription.<br />Please check
+                                      Thank you for your registration on the project ${PROJECT}, we
+                                      have chosen to validate your registration.<br />Please check
                                       your e-mails in case of changements concerning the project.
                                       The call-sheet ( ${CALLSHEET} ) will be regularly updated.
                                     </p>
