--- a/app/mails/html_templates/recommendation_notification.html
+++ b/app/mails/html_templates/recommendation_notification.html
@@ -791,13 +791,13 @@
                                         font-size: 14px;
                                       "
                                     >
-                                      If you wish to participate in our upcoming project or if you want to know more, please
-                                      use this link: ${REGISTRATION}
+                                      If you wish to participate in our upcoming project or if you
+                                      want to know more, please use this link: ${REGISTRATION}
                                       <br />
                                       <br />
                                       If you need even more details, you can contact a responsible :
-                                      <br> ${TO_CONTACT}</span>
-                                    >
+                                      <br />
+                                      ${TO_CONTACT} >
                                     </p>
                                     <p
                                       style="
@@ -930,12 +930,14 @@
                                         font-size: 14px;
                                       "
                                     >
-                                      Si vous souhaitez participer à notre prochain projet ou en savoir plus, veuillez
-                                      suivre ce lien : ${REGISTRATION}
+                                      Si vous souhaitez participer à notre prochain projet ou en
+                                      savoir plus, veuillez suivre ce lien : ${REGISTRATION}
                                       <br />
                                       <br />
-                                      Si vous avez besoin de davantage d'information, vous pouvez contacter un responsable :
-                                      <br> ${TO_CONTACT}</span>
+                                      Si vous avez besoin de davantage d'information, vous pouvez
+                                      contacter un responsable :
+                                      <br />
+                                      ${TO_CONTACT}
                                     </p>
                                     <p
                                       style="
