default template editing working

--- a/app/mails/html_templates/recruitment_notification.html
+++ b/app/mails/html_templates/recruitment_notification.html
@@ -797,7 +797,7 @@
                                       <br />
                                       If you need even more details, you can contact a responsible :
                                       <br />
-                                      ${TO_CONTACT} >
+                                      ${TO_CONTACT}
                                     </p>
                                     <p
                                       style="
